--- a/Assignment_1.ipynb
+++ b/Assignment_1.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "name": "Assignment 1 (TF 2).ipynb",
       "provenance": [],
-      "collapsed_sections": [],
-      "include_colab_link": true
+      "collapsed_sections": []
     },
     "kernelspec": {
       "display_name": "Python 3",
@@ -30,16 +29,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/satyaki-mallick/DeepLearningAssignment1/blob/master/Assignment_1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "colab_type": "text",
         "id": "7ORVPadj7rKq"
       },
@@ -48,7 +37,7 @@
         "\n",
         "<b>Group [fill in group number]</b>\n",
         "* <b> Student 1 </b> : SATYAKI MALLICK + 1410881\n",
-        "* <b> Student 2 </b> : HUILIN + <student id>\n",
+        "* <b> Student 2 </b> : HUILIN + Huilin_student_no\n",
         "\n",
         "**Reading material**\n",
         "* [1] Mikolov, Tomas, et al. \"[Efficient Estimation of Word Representations in Vector Space](https://arxiv.org/abs/1301.3781)\" Advances in neural information processing systems. 2013. \n",
