initial structure for skipgram

--- a/Assignment_1.ipynb
+++ b/Assignment_1.ipynb
@@ -29,6 +29,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "7uut_aem5B5q",
+        "colab_type": "text"
+      },
+      "source": [
+        "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/satyaki-mallick/DeepLearningAssignment1/blob/master/Assignment_1.ipynb#scrollTo=7uut_aem5B5q)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "colab_type": "text",
         "id": "7ORVPadj7rKq"
       },
@@ -101,7 +111,11 @@
       "metadata": {
         "colab_type": "code",
         "id": "vCnATRPgBZEd",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "90f11536-d243-4c1b-a060-33e3a548a0b4"
       },
       "source": [
         "import numpy as np\n",
@@ -123,21 +137,41 @@
         "from matplotlib import pylab\n",
         "import pandas as pd"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Using TensorFlow backend.\n"
+          ],
+          "name": "stderr"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "colab_type": "code",
         "id": "qBNCPtOoBbB1",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "e3cc96b9-df12-40ab-f33a-1abd427fe1ed"
       },
       "source": [
         "print(tf.__version__) #  check what version of TF is imported"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "2.2.0-rc4\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -156,14 +190,30 @@
       "metadata": {
         "colab_type": "code",
         "id": "DdjNeehKBd-a",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 122
+        },
+        "outputId": "e00cbc50-6521-4d96-9ba3-d7d4d0c4b54a"
       },
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Go to this URL in a browser: https://accounts.google.com/o/oauth2/auth?client_id=947318989803-6bn6qk8qdgf4n4g3pfee6491hc0brc4i.apps.googleusercontent.com&redirect_uri=urn%3aietf%3awg%3aoauth%3a2.0%3aoob&response_type=code&scope=email%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdocs.test%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdrive%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdrive.photos.readonly%20https%3a%2f%2fwww.googleapis.com%2fauth%2fpeopleapi.readonly\n",
+            "\n",
+            "Enter your authorization code:\n",
+            "··········\n",
+            "Mounted at /content/drive\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -180,13 +230,25 @@
       "metadata": {
         "colab_type": "code",
         "id": "iS0-uINUBfic",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "edb0b4ff-956d-4006-ce54-3c1a9bdf2e1d"
       },
       "source": [
-        "cd '/content/drive/My Drive/Colab Notebooks/DL course/'"
+        "cd '/content/drive/My Drive/Colab Notebooks/'"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/content/drive/My Drive/Colab Notebooks\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -242,27 +304,56 @@
       "metadata": {
         "colab_type": "code",
         "id": "ILdA_IimBlte",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "95b49d73-3c82-414b-da2f-0cd329351882"
       },
       "source": [
         "n_samples, V"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(27165, 2557)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 9
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "colab_type": "code",
         "id": "fRbpue0WBms6",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "4ac40074-7b62-4885-8de7-d36f5b75265a"
       },
       "source": [
         "# example of how word to integer mapping looks like in the tokenizer\n",
         "print(list((tokenizer.word_index.items()))[:5])"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[('the', 1), ('and', 2), ('to', 3), ('a', 4), ('it', 5)]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -301,7 +392,27 @@
         "#prepare data for skipgram\n",
         "def generate_data_skipgram(corpus, window_size, V):\n",
         "    # TODO Implement here\n",
-        "    # HINT: see Practical 3.1"
+        "    # HINT: see Practical 3.1\n",
+        "    maxlen = window_size*2\n",
+        "    all_in = []\n",
+        "    all_out = []\n",
+        "    for words in corpus:\n",
+        "        L = len(words)\n",
+        "        for index, word in enumerate(words):\n",
+        "            p = index - window_size\n",
+        "            n = index + window_size + 1\n",
+        "                    \n",
+        "            in_words = []\n",
+        "            labels = []\n",
+        "            for i in range(p, n):\n",
+        "                if i != index and 0 <= i < L:\n",
+        "                    # Add the input word\n",
+        "                    #in_words.append(word)\n",
+        "                    all_in.append(word)\n",
+        "                    # Add one-hot of the context words\n",
+        "                    all_out.append(to_categorical(words[i], V))\n",
+        "                                      \n",
+        "    return (np.array(all_in),np.array(all_out))"
       ],
       "execution_count": 0,
       "outputs": []
@@ -315,10 +426,119 @@
       },
       "source": [
         "# create training data\n",
-        "x , y = generate_skipgram(corpus,window_size,V)"
+        "x , y = generate_data_skipgram(corpus,window_size,V)"
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "My8ZZJNbsCCs",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 136
+        },
+        "outputId": "641454dd-8823-47a2-a431-df4174607733"
+      },
+      "source": [
+        "# x each word represented as a number and then a window created"
+      ],
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([305, 305,   7,   7,   7,  38,  38,  38,  38,   1,   1,   1,   1,\n",
+              "        92,  92,  92, 595, 595,  11,  11,  13,  13,  13, 253, 253, 253,\n",
+              "       253,   3,   3,   3,   3, 106, 106, 106, 106,  30,  30,  30,  30,\n",
+              "       470, 470, 470, 470,   8,   8,   8,   8, 342, 342, 342, 342,  76,\n",
+              "        76,  76,  76,  16,  16,  16,  16, 379, 379, 379, 379,  20,  20,\n",
+              "        20,   1,   1, 828, 828,   2,   2,   2,   8,   8,   8,   8, 343,\n",
+              "       343, 343])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 28
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ifUAcKq1smqj",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 68
+        },
+        "outputId": "b8f5293e-5415-4623-f9a6-013a416bf9f4"
+      },
+      "source": [
+        "# Sample of y:\n",
+        "# rows represent each word.\n",
+        "# columns represent total unique words\n",
+        "# sample array for y for input [1, 0, 3, 4, 5, 0, 2, 1]\n",
+        "# array([[ 0.,  1.,  0.,  0.,  0.,  0.],\n",
+        "#        [ 1.,  0.,  0.,  0.,  0.,  0.],\n",
+        "#        [ 0.,  0.,  0.,  1.,  0.,  0.],\n",
+        "#        [ 0.,  0.,  0.,  0.,  1.,  0.],\n",
+        "#        [ 0.,  0.,  0.,  0.,  0.,  1.],\n",
+        "#        [ 1.,  0.,  0.,  0.,  0.,  0.],\n",
+        "#        [ 0.,  0.,  1.,  0.,  0.,  0.],\n",
+        "#        [ 0.,  1.,  0.,  0.,  0.,  0.]])"
+      ],
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[0., 0., 0., ..., 0., 0., 0.],\n",
+              "       [0., 0., 0., ..., 0., 0., 0.],\n",
+              "       [0., 0., 0., ..., 0., 0., 0.]], dtype=float32)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 29
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "VhOEHUygm7y3",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "18a2fc6b-188d-47b1-8fbd-220e9f314960"
+      },
+      "source": [
+        "x.shape, y.shape"
+      ],
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "((94556,), (94556, 2557))"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 20
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -328,7 +548,59 @@
         "colab": {}
       },
       "source": [
-        "# create skipgram architecture"
+        "def skipgram_architechture(input_dim, output_dim, input_length):\n",
+        "  model = Sequential()\n",
+        "  model.add(Embedding(input_dim, output_dim, input_length, kernel_initializer='glorot_uniform'))\n",
+        "  model.add(Reshape((dim,), input_shape=(1,dim)))\n",
+        "  model.add(Dense(10, activation='softmax', kernel_initializer='glorot_uniform'))\n",
+        "  model.compile(optimizer='SGD',\n",
+        "                  loss='categorical_crossentropy',\n",
+        "                  metrics=['accuracy'])\n",
+        "  return model"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "KV9voh0c3pmV",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 327
+        },
+        "outputId": "2e6fc2ce-5cd7-470f-fafd-877626e0329b"
+      },
+      "source": [
+        "plot_model(skipgram_architechture, show_shapes = True, show_layer_names=False)"
+      ],
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "AttributeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-34-80f0f94adbac>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mplot_model\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mskipgram_architechture\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mshow_shapes\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mshow_layer_names\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/tensorflow/python/keras/utils/vis_utils.py\u001b[0m in \u001b[0;36mplot_model\u001b[0;34m(model, to_file, show_shapes, show_layer_names, rankdir, expand_nested, dpi)\u001b[0m\n\u001b[1;32m    281\u001b[0m                      \u001b[0mrankdir\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mrankdir\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    282\u001b[0m                      \u001b[0mexpand_nested\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mexpand_nested\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 283\u001b[0;31m                      dpi=dpi)\n\u001b[0m\u001b[1;32m    284\u001b[0m   \u001b[0;32mif\u001b[0m \u001b[0mdot\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    285\u001b[0m     \u001b[0;32mreturn\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/tensorflow/python/keras/utils/vis_utils.py\u001b[0m in \u001b[0;36mmodel_to_dot\u001b[0;34m(model, show_shapes, show_layer_names, rankdir, expand_nested, dpi, subgraph)\u001b[0m\n\u001b[1;32m    127\u001b[0m   \u001b[0msub_w_last_node\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    128\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 129\u001b[0;31m   \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_is_graph_network\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    130\u001b[0m     \u001b[0mnode\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpydot\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mNode\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mid\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlabel\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    131\u001b[0m     \u001b[0mdot\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd_node\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnode\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mAttributeError\u001b[0m: 'function' object has no attribute '_is_graph_network'"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "BJX9ht7X3se7",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "skipgram_architechture.summary()"
       ],
       "execution_count": 0,
       "outputs": []
