Train Skipgram model Task 1.1

--- a/Assignment_1.ipynb
+++ b/Assignment_1.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "Assignment 1 (TF 2).ipynb",
       "provenance": [],
-      "collapsed_sections": []
+      "collapsed_sections": [],
+      "machine_shape": "hm"
     },
     "kernelspec": {
       "display_name": "Python 3",
@@ -115,7 +116,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "90f11536-d243-4c1b-a060-33e3a548a0b4"
+        "outputId": "fc33930a-6042-478c-dc34-89efd59a9b3b"
       },
       "source": [
         "import numpy as np\n",
@@ -137,7 +138,7 @@
         "from matplotlib import pylab\n",
         "import pandas as pd"
       ],
-      "execution_count": 2,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -157,12 +158,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "e3cc96b9-df12-40ab-f33a-1abd427fe1ed"
+        "outputId": "21a9d00d-0817-42c8-d4b6-b3f81a5acbf9"
       },
       "source": [
         "print(tf.__version__) #  check what version of TF is imported"
       ],
-      "execution_count": 3,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -192,24 +193,20 @@
         "id": "DdjNeehKBd-a",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 122
+          "height": 34
         },
-        "outputId": "e00cbc50-6521-4d96-9ba3-d7d4d0c4b54a"
+        "outputId": "e528cf76-5836-462c-ace1-fe264c729c6f"
       },
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 4,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Go to this URL in a browser: https://accounts.google.com/o/oauth2/auth?client_id=947318989803-6bn6qk8qdgf4n4g3pfee6491hc0brc4i.apps.googleusercontent.com&redirect_uri=urn%3aietf%3awg%3aoauth%3a2.0%3aoob&response_type=code&scope=email%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdocs.test%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdrive%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdrive.photos.readonly%20https%3a%2f%2fwww.googleapis.com%2fauth%2fpeopleapi.readonly\n",
-            "\n",
-            "Enter your authorization code:\n",
-            "··········\n",
-            "Mounted at /content/drive\n"
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
           ],
           "name": "stdout"
         }
@@ -234,12 +231,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "edb0b4ff-956d-4006-ce54-3c1a9bdf2e1d"
+        "outputId": "18a9b67f-404f-48d2-ff04-4e0714004dd3"
       },
       "source": [
         "cd '/content/drive/My Drive/Colab Notebooks/'"
       ],
-      "execution_count": 6,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -308,12 +305,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "95b49d73-3c82-414b-da2f-0cd329351882"
+        "outputId": "e978f84b-b6c7-42e6-f3b6-4666bf0f7bf7"
       },
       "source": [
         "n_samples, V"
       ],
-      "execution_count": 9,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -325,7 +322,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 9
+          "execution_count": 10
         }
       ]
     },
@@ -338,13 +335,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "4ac40074-7b62-4885-8de7-d36f5b75265a"
+        "outputId": "065537a8-2ff8-468b-94b9-75693a58c116"
       },
       "source": [
         "# example of how word to integer mapping looks like in the tokenizer\n",
         "print(list((tokenizer.word_index.items()))[:5])"
       ],
-      "execution_count": 10,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -436,47 +433,20 @@
       "metadata": {
         "id": "My8ZZJNbsCCs",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 136
-        },
-        "outputId": "641454dd-8823-47a2-a431-df4174607733"
+        "colab": {}
       },
       "source": [
         "# x each word represented as a number and then a window created"
       ],
-      "execution_count": 28,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([305, 305,   7,   7,   7,  38,  38,  38,  38,   1,   1,   1,   1,\n",
-              "        92,  92,  92, 595, 595,  11,  11,  13,  13,  13, 253, 253, 253,\n",
-              "       253,   3,   3,   3,   3, 106, 106, 106, 106,  30,  30,  30,  30,\n",
-              "       470, 470, 470, 470,   8,   8,   8,   8, 342, 342, 342, 342,  76,\n",
-              "        76,  76,  76,  16,  16,  16,  16, 379, 379, 379, 379,  20,  20,\n",
-              "        20,   1,   1, 828, 828,   2,   2,   2,   8,   8,   8,   8, 343,\n",
-              "       343, 343])"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 28
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "ifUAcKq1smqj",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 68
-        },
-        "outputId": "b8f5293e-5415-4623-f9a6-013a416bf9f4"
+        "colab": {}
       },
       "source": [
         "# Sample of y:\n",
@@ -492,23 +462,8 @@
         "#        [ 0.,  0.,  1.,  0.,  0.,  0.],\n",
         "#        [ 0.,  1.,  0.,  0.,  0.,  0.]])"
       ],
-      "execution_count": 29,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([[0., 0., 0., ..., 0., 0., 0.],\n",
-              "       [0., 0., 0., ..., 0., 0., 0.],\n",
-              "       [0., 0., 0., ..., 0., 0., 0.]], dtype=float32)"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 29
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -519,12 +474,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "18a2fc6b-188d-47b1-8fbd-220e9f314960"
+        "outputId": "95192b62-721d-405f-c943-b375d713120d"
       },
       "source": [
         "x.shape, y.shape"
       ],
-      "execution_count": 20,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -536,7 +491,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 20
+          "execution_count": 17
         }
       ]
     },
@@ -548,11 +503,14 @@
         "colab": {}
       },
       "source": [
-        "def skipgram_architechture(input_dim, output_dim, input_length):\n",
+        "def skipgram_architechture():\n",
         "  model = Sequential()\n",
-        "  model.add(Embedding(input_dim, output_dim, input_length, kernel_initializer='glorot_uniform'))\n",
-        "  model.add(Reshape((dim,), input_shape=(1,dim)))\n",
-        "  model.add(Dense(10, activation='softmax', kernel_initializer='glorot_uniform'))\n",
+        "  model.add(Embedding(input_dim=y.shape[1], output_dim=50, input_length=y.shape[0], embeddings_initializer='glorot_uniform'))\n",
+        "  # not sure about the input length\n",
+        "  #model.add(Reshape((94556,), input_shape=(1,94556)))\n",
+        "  # above line or below line\n",
+        "  model.add(Reshape((50,), input_shape=(1, 50)))\n",
+        "  model.add(Dense(2557, activation='softmax', kernel_initializer='glorot_uniform'))\n",
         "  model.compile(optimizer='SGD',\n",
         "                  loss='categorical_crossentropy',\n",
         "                  metrics=['accuracy'])\n",
@@ -566,44 +524,51 @@
       "metadata": {
         "id": "KV9voh0c3pmV",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 327
-        },
-        "outputId": "2e6fc2ce-5cd7-470f-fafd-877626e0329b"
+        "colab": {}
       },
       "source": [
-        "plot_model(skipgram_architechture, show_shapes = True, show_layer_names=False)"
+        "#plot_model(skipgram_architechture, show_shapes = True, show_layer_names=False)"
       ],
-      "execution_count": 34,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "AttributeError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-34-80f0f94adbac>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mplot_model\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mskipgram_architechture\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mshow_shapes\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mshow_layer_names\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/tensorflow/python/keras/utils/vis_utils.py\u001b[0m in \u001b[0;36mplot_model\u001b[0;34m(model, to_file, show_shapes, show_layer_names, rankdir, expand_nested, dpi)\u001b[0m\n\u001b[1;32m    281\u001b[0m                      \u001b[0mrankdir\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mrankdir\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    282\u001b[0m                      \u001b[0mexpand_nested\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mexpand_nested\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 283\u001b[0;31m                      dpi=dpi)\n\u001b[0m\u001b[1;32m    284\u001b[0m   \u001b[0;32mif\u001b[0m \u001b[0mdot\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    285\u001b[0m     \u001b[0;32mreturn\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/tensorflow/python/keras/utils/vis_utils.py\u001b[0m in \u001b[0;36mmodel_to_dot\u001b[0;34m(model, show_shapes, show_layer_names, rankdir, expand_nested, dpi, subgraph)\u001b[0m\n\u001b[1;32m    127\u001b[0m   \u001b[0msub_w_last_node\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    128\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 129\u001b[0;31m   \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_is_graph_network\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    130\u001b[0m     \u001b[0mnode\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpydot\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mNode\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mid\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlabel\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    131\u001b[0m     \u001b[0mdot\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd_node\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnode\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mAttributeError\u001b[0m: 'function' object has no attribute '_is_graph_network'"
-          ]
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "BJX9ht7X3se7",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 255
+        },
+        "outputId": "cbf23b46-f151-4cef-a0a1-ac3af4eb7716"
       },
       "source": [
-        "skipgram_architechture.summary()"
+        "skipgram_architechture().summary()"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Model: \"sequential\"\n",
+            "_________________________________________________________________\n",
+            "Layer (type)                 Output Shape              Param #   \n",
+            "=================================================================\n",
+            "embedding (Embedding)        (None, 94556, 50)         127850    \n",
+            "_________________________________________________________________\n",
+            "reshape (Reshape)            (None, 94556)             0         \n",
+            "_________________________________________________________________\n",
+            "dense (Dense)                (None, 2557)              241782249 \n",
+            "=================================================================\n",
+            "Total params: 241,910,099\n",
+            "Trainable params: 241,910,099\n",
+            "Non-trainable params: 0\n",
+            "_________________________________________________________________\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -620,13 +585,41 @@
       "metadata": {
         "colab_type": "code",
         "id": "a9eg0xPoDP9B",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 105
+        },
+        "outputId": "638e0b1f-5ae1-48e5-b2b1-4c153426ced9"
       },
       "source": [
-        "# train skipgram model"
+        "# train skipgram model\n",
+        "skipgram = skipgram_architechture()\n",
+        "skipgram.fit(x, y)"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "WARNING:tensorflow:Model was constructed with shape (None, 94556) for input Tensor(\"embedding_4_input:0\", shape=(None, 94556), dtype=float32), but it was called on an input with incompatible shape (None, 1).\n",
+            "WARNING:tensorflow:Model was constructed with shape (None, 94556) for input Tensor(\"embedding_4_input:0\", shape=(None, 94556), dtype=float32), but it was called on an input with incompatible shape (None, 1).\n",
+            "2955/2955 [==============================] - 7s 3ms/step - loss: 7.6985 - accuracy: 0.0602\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tensorflow.python.keras.callbacks.History at 0x7f5426f7bf60>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 24
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -636,7 +629,9 @@
         "colab": {}
       },
       "source": [
-        "# save embeddings for vectors of length 50, 150 and 300 using skipgram model"
+        "# save embeddings for vectors of length 50, 150 and 300 using skipgram model\n",
+        "\n",
+        "## How to save the model"
       ],
       "execution_count": 0,
       "outputs": []
